--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,21 @@
 .img {
-    margin-top: 25px;
-    width: 100%;
-    height: 600px;
-    object-fit: contain;
+  width: 100%;
+  max-height: 600px;
+  object-fit: contain;
+  animation: move 3s infinite ease alternate;
+}
+
+@keyframes move {
+  from {
+    transform: translateY(-15px);
   }
-  
-  .zoom-animation {
-    animation: move 3s infinite ease alternate;
+  to {
+    transform: translateY(0px) scale(1.08);
   }
-  
-  @keyframes move {
-    from {
-      transform: translateY(-15px);
-    }
-    to {
-      transform: translateY(0px) scale(1.08);
-    }
-  }
-  /* styles.css */
+}
+
 .title {
-  font-size: 66px;
+  margin-bottom: 10px;
   background: linear-gradient(to bottom, #194c33, #bbb);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -28,27 +24,36 @@
 .desc {
   font-size: 20px;
   font-weight: 300;
+  margin-bottom: 20px;
 }
 
-
-
- 
-
-  /* .item{
-    font-size: xx-large;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
+@media (max-width: 768px) {
+  .title {
+    font-size: 50px;
   }
-  .title{
-    font-size: 72px;
-    background: linear-gradient(to bottom,#194c33 ,#bbb);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+
+  .desc {
+    font-size: 18px;
   }
-  
-  .desc{
-    font-size: 24px;
-    font-weight: 300;
-  } */
+}
+
+@media (min-width: 1025px) {
+  .img {
+    max-height: 600px;
+  }
+}  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
