--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.img {
+/* .img {
   width: 100%;
   max-height: 600px;
   object-fit: contain;
@@ -41,7 +41,7 @@
   .img {
     max-height: 600px;
   }
-}  
+}   */
 
 
 
